# archive-viewer

./: README.md  application  archivex  local.adw.Test.json  meson.build
data/: com.mealynn.ArchiveX.appdata.xml.in  com.mealynn.ArchiveX.desktop.in  com.mealynn.ArchiveX.gschema.xml  com.merlin.ArchiveX.appdata.xml.in  com.merlin.ArchiveX.desktop.in  com.merlin.ArchiveX.gschema.xml  local.adw.Test.appdata.xml.in  local.adw.Test.desktop.in  local.adw.Test.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  archive.vala  content_provider_helper.c  file_view.vala  main.vala  meson.build  tst.ui
